# ido_web_dictionary

./: .gitignore  Cargo.toml  README.md  build.gradle  convert.py  pom.xml  settings.gradle  tsconfig.json
backend/: build.gradle
conversion_tools/: build.gradle  pom.xml
conversion_tools/backend/: build.gradle
deployment/: build-and-deploy.sh  ido_dictionary.service  nginx.conf.excerpt
frontend/: README.md  build.gradle  index.html
frontend/static/: ido_web_dict.js  ido_web_dict.ts
gradle/wrapper/: gradle-wrapper.properties
misc_data/stardict/en-io/: en-io.dict  en-io.idx  en-io.ifo
misc_data/stardict/io-en/: io-en.dict  io-en.idx  io-en.ifo
misc_data/stardict/io-ru-io/: io-ru-io.idx  io-ru-io.ifo
service_data/dictionaries_by_letter/en-io/: a.txt  aa.txt  ae.txt  ag.txt  ah.txt  ai.txt  al.txt  am.txt  an.txt  ao.txt  aq.txt  ar.txt  as.txt  au.txt  ay.txt  b.txt  ba.txt  bo.txt  by.txt  c.txt  cab.txt  cac.txt  caf.txt  cai.txt  cak.txt  cao.txt  cap.txt  car.txt  cat.txt  cau.txt  cav.txt  ch.txt  ci.txt  cl.txt  coa.txt  cod.txt  coe.txt  cof.txt  cok.txt  col.txt  (+195 more)
service_data/dictionaries_by_letter/io-en/: a.txt  ac.txt  ae.txt  ag.txt  aj.txt  ak.txt  al.txt  am.txt  an.txt  ar.txt  at.txt  av.txt  ax.txt  c.txt  ca.txt  ce.txt  ch.txt  ci.txt  co.txt  cp.txt  d.txt  de.txt  deb.txt  dec.txt  ded.txt  def.txt  dej.txt  dem.txt  deo.txt  dep.txt  der.txt  des.txt  deu.txt  dev.txt  dez.txt  dj.txt  dr.txt  du.txt  eb.txt  ec.txt  (+126 more)
src/: dictionary.go  dictionary.rs  generate_stardict_dictionary.rs  main.go  main.rs
(+2118 files in other folders)
