[package]
name = "ido_web_dictionary"
version = "0.1.0"
authors = ["Konstantin Yegupov <kyegupov4@gmail.com>"]

[dependencies]
iron = "0.6.0"
iron-json-response = "0.6.0"
select = "0.4.2"
urlencoded = "0.6.0"
maplit = "*"
serde = "1.0"
serde_derive = "1.0"
staticfile = "0.5.0"
mount = "0.4.0"
regex = "*"
